added some more api routes for executive
